# myCanvas

./: .README.md.swp  .TODO.md  .gitattributes  .gitignore  CMakeLists.txt  README.md  frieren  nob.c
.cache/clangd/index/: main.cpp.B866E45F6BFE4FBD.idx  raylib.h.F694E50A1247B845.idx
build-sdl-unix/: CMakeCache.txt  cmake_uninstall.cmake
build-sdl-unix/include-revision/SDL3/: SDL_revision.h
include/: SDLHandler.h  canvas.h  events.h  helpers.h
src/: .canvas.cpp.swp  SDLHandler.cpp  canvas.cpp  canvas_misc.cpp  canvas_render.cpp  canvas_update.cpp  events.cpp  helpers.cpp  main.cpp
